CHANGES IN VERSION 1.27
-----------------------

BUG FIX

    o (1.27.9) Allow portability of child Rmd documents via parseFile
    o (1.27.3) Correct check for if package already exists in CRAN/Bioc
    o (1.27.3) Correct check for single colon use
    o (1.27.2) Correct path to R license database file by calling
    R.home('share').


NEW FEATURES

    o (1.27.8) Check for 'tests' entry in '.Rbuildignore'
    o (1.27.7) Removed BiocCheck and BiocCheckGitClone installation scripts;
    recommended usage is `BiocCheck()`
    o (1.27.6) Check that a user has the package name in watched tags of
    support site
    o (1.27.5) Check for 'paste' / 'paste0' in signaler functions, `message`,
    'warning', and 'stop' (@LiNk-NY, #64)
    o (1.27.4) Check for downloads from external resources (github, gitlab,
    bitbucket, dropbox; @LiNk-NY, #75)
    o (1.27.1) Check that licenses do not exclude classes of users,
    e.g., non-academic users.

CHANGES IN VERSION 1.25
-----------------------

DEPRECATION ANNOUNCEMENT

    o (1.25.11) R CMD BiocCheck and R CMD BiocCheckGitClone are deprecated. The
    recommended way to run the functions is within R.

NEW FEATURES

    o (1.25.1) Check for warning/notes on too-brief a Description: field
    (@federicomarini, #65)
    o (1.25.4) Check for single colon typos when using qualified imports
    pkg::foo()
    o (1.25.8) Validate ORCID IDs (if any) in the DESCRIPTION file
    (@LiNk-NY, #97)
    o (1.25.10) Add check for properly formatted CITATION file
    o (1.25.12) Add NOTE to change dontrun to donttest

BUG FIXES

    o (1.25.14) The ORCID ID check now accepts IDs with a X at the end.
    o (1.25.9) All packages including infrastructure require a vignette
    o Usage of donttest and dontrun in manual pages tagged with the keyword
    'internal' will no longer trigger a NOTE (@grimbough, #59)
    o (1.25.7) Adding the sessionInfo at the end of the vignette (@llrs)

USER SIGNIFICANT CHANGES
